[package]
name = "libember-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.123"

[build-dependencies]
bindgen = "0.59.2"
duckscript = "0.7.2"
duckscriptsdk = "0.8.12"

[features]
default = ["static"]
doc = []
static = []
